Do not show 'Divide' button in 'divide preview' mode in case of only one subregion/cluster

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -210,13 +210,8 @@
                     </label>
                 </div>
                	<button onclick="bDividePreview()">Посмотреть субобласти</button><br>
-				<div id="d_none">Нет областей</div>
-				<div id="d_do">
-					<span id="d_count"></span><br>
-					<!-- Префикс <input type="text" id="d_prefix"><br-->
-
-					<button onclick="bDivideDo()">Заменить область</button>
-				</div>
+				<div id="d_count"></div>
+				<button id="b_divide" onclick="bDivideDo()">Заменить область</button>
 				<br>
 				<button onclick="bDivideCancel()">Вернуться</button>
 			</div>
