--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -30,8 +30,11 @@
 			#backup_saving, #backup_restoring { margin-bottom: 1em; }
 			#filefm, #old_action, #josm_old, #cross_actions { display: none; }
 			#h_iframe { display: block; width: 100%; height: 80px; }
+            a, a:hover, a:visited { color: blue; }
             #start_over, #start_over:hover, #start_over:visited { color: red; }
-            #city_population_thr, #cluster_population_thr { max-width: 80px;}
+            #population_thresholds { padding-left: 1.5em; }
+            #mwm_size_thr { max-width: 50px;}
+            #r_green, #r_red { width: 40px; }
             #b_import { max-width: 180px; }
             #import_div { position: relative; display: none; }
             #hide_import_button {
@@ -44,7 +47,7 @@
                 align-items: center;
                 justify-content: center;
                 cursor: pointer;
-            } 
+            }
 
 		</style>
 	</head>
@@ -54,7 +57,8 @@
 				<div id="filter">
 					Раскраска по <select size="1" id="f_type" value="size" onchange="filterSelect()">
                         <option value="country">стране</option>
-						<option value="size">размеру</option>
+						<option value="nodes_size">размеру по точкам</option>
+						<option value="predict_size">предсказ. размеру</option>
 						<option value="topo">топологии</option>
 						<option value="chars">буквам в назв.</option>
 						<option value="comments">комментариям</option>
@@ -138,7 +142,8 @@
                     </div>
                     <div id="potential_parents">
                     </div>
-					<b>Оценка размера:</b> <span id="b_size"></span><br>
+					<b>Оценка размера по точкам:</b> <span id="b_size"></span><br>
+					<b>Оценка размера по нас+пл:</b> <span id="pa_size"></span><br>
 					<b>Последняя правка:</b> <span id="b_date"></span><br>
 					<b>Количество точек:</b> <span id="b_nodes"></span><br>
 					<b>Площадь:</b> <span id="b_area"></span> км²<br>
@@ -188,20 +193,18 @@
 				<button onclick="bPointCancel()">Вернуться</button>
 			</div>
 			<div id="divide" class="actions">
-				Выбранная область <span id="region_to_divide"></span> 
+				Выбранная область <span id="region_to_divide"></span>
                 будет заменена вложенными областями уровня
                 <input type="number" id="next_level" min="2" max="12">.<br>
 				<br>
                 <div>
                     <input type="checkbox" id="auto_divide" checked>
                     <label for="auto_divide">Автослияние по населению</label>
-                </div>
-                <div id="population_thresholds">
-                    Порог населения города, региона<br>
-                    <input id="city_population_thr" type="number"
-                        min="0" max="8000000000" value="500000" step="50000">,
-                    <input id="cluster_population_thr" type="number"
-                        min="0" max="8000000000" value="500000" step="50000">
+                    <div id="population_thresholds">
+                        Верхняя граница размера mwm:
+                        <input id="mwm_size_thr" type="number"
+                            min="1" value="70" step="1"> Мб
+                    </div>
                 </div>
                 <div>
                     <input type="checkbox" id="apply_to_similar">
