--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -15,8 +15,8 @@
 			#panel { width: 250px; float: right; padding: 1em; font-family: sans-serif; font-size: 80% }
 			#panel button { font-size: 9pt; margin: 4px 0; background-color: #eee; }
 			#map { margin-right: 250px; }
-			#actions { visibility: hidden; }
-			#osm_actions { display: none; margin-top: 1em; }
+			#selected_border_actions, #b_divide { display: none; }
+			#unbound_actions { display: none; margin-bottom: 1em; }
 			#backups { display: none; }
             #rename, #potential_parents { display: none; margin-left: 10px; }
             #wait_start_over { display: none; }
@@ -109,49 +109,47 @@
 					Поиск <input type="text" id="fsearch"><button id="b_search" onclick="doSearch()">&#x1f50d;</button>
 				</div>
 			</div>
-			<div id="actions" class="actions">
-				<div id="action_buttons">
-					<!--button onclick="bDisable()" id="b_disable">Убрать</button-->
-					<!--a href="#" onclick="bDelete(); return false;" id="b_delete">Удалить</a-->
-					<button onclick="bDelete()" id="b_delete">Удалить</button><br>
-					<button onclick="bSplit()">Разрезать</button>
-					<button onclick="bJoin()">Склеить</button><br>
-					<button onclick="bJoinToParent()">Склеить всё до родителя</button><br>
-					<button disabled onclick="bLargest()">Выделить острова</button>
-					<button disabled onclick="bHull()">Единый контур</button><br>
-					<div id="osm_actions">
-						<button onclick="bDivide()">Заменить регионами</button><br>
-						<button onclick="bPoint()">Регион из точки</button><br>
-					</div>
-					<div id="cross_actions">
-						<button onclick="bFixCross()">Исправить меж-mwm</button><br>
-					</div>
+			<div id="actions">
+				<div id="unbound_actions">
+					<button id="b_point" onclick="bPoint()">Регион из точки</button><br>
 				</div>
-
-				<div id="info">
-					<b><a href="#" id="rename_link" onclick="bToggleRename(); return false;">Название &#9660:</a></b>
-					<span id="b_name"></span>
-                    <span id="b_al"></span><br>
-					<div id="rename">
-						<input type="text" id="b_rename">
-						<button onclick="bRename()">Переименовать</button>
+				<div id="selected_border_actions" class="actions">
+					<div id="action_buttons">
+						<!--button onclick="bDisable()" id="b_disable">Убрать</button-->
+						<!--a href="#" onclick="bDelete(); return false;" id="b_delete">Удалить</a-->
+						<button onclick="bDelete()" id="b_delete">Удалить</button><br>
+						<button onclick="bSplit()">Разрезать</button>
+						<button onclick="bJoin()">Склеить</button><br>
+						<button onclick="bJoinToParent()">Склеить всё до родителя</button><br>
+						<button disabled onclick="bLargest()">Выделить острова</button>
+						<button disabled onclick="bHull()">Единый контур</button><br>
+						<button id="b_divide" onclick="bDivide()">Заменить регионами</button><br>
 					</div>
-                    <div>
-                        <b><a href="#" id="parent_link" onclick="bTogglePotentialParents(); return false;">Родитель &#9660:</a></b>
-                        <span id="b_parent_name"></span>
-                    </div>
-                    <div id="potential_parents">
-                    </div>
-					<b>Оценка размера по точкам:</b> <span id="b_size"></span><br>
-					<b>Оценка размера по нас+пл:</b> <span id="pa_size"></span><br>
-					<b>Последняя правка:</b> <span id="b_date"></span><br>
-					<b>Количество точек:</b> <span id="b_nodes"></span><br>
-					<b>Площадь:</b> <span id="b_area"></span> км²<br>
-					<!--b>Статус:</b> <span id="b_status"></span><br-->
-					<b>Комментарий:</b><br>
-					<textarea style="width: 240px; height: 100px;" id="b_comment"></textarea><br>
-					<button id="b_comment_send" onclick="bComment()">Отправить</button>
-					<a href="#" onclick="bClearComment(); return false;" id="b_clear">Очистить</a>
+					<div id="info">
+						<b><a href="#" id="rename_link" onclick="bToggleRename(); return false;">Название &#9660:</a></b>
+						<span id="b_name"></span>
+						<span id="b_al"></span><br>
+						<div id="rename">
+							<input type="text" id="b_rename">
+							<button onclick="bRename()">Переименовать</button>
+						</div>
+						<div>
+							<b><a href="#" id="parent_link" onclick="bTogglePotentialParents(); return false;">Родитель &#9660:</a></b>
+							<span id="b_parent_name"></span>
+						</div>
+						<div id="potential_parents">
+						</div>
+						<b>Оценка размера по точкам:</b> <span id="b_size"></span><br>
+						<b>Оценка размера по нас+пл:</b> <span id="pa_size"></span><br>
+						<b>Последняя правка:</b> <span id="b_date"></span><br>
+						<b>Количество точек:</b> <span id="b_nodes"></span><br>
+						<b>Площадь:</b> <span id="b_area"></span> км²<br>
+						<!--b>Статус:</b> <span id="b_status"></span><br-->
+						<b>Комментарий:</b><br>
+						<textarea style="width: 240px; height: 100px;" id="b_comment"></textarea><br>
+						<button id="b_comment_send" onclick="bComment()">Отправить</button>
+						<a href="#" onclick="bClearComment(); return false;" id="b_clear">Очистить</a>
+					</div>
 				</div>
 			</div>
 			<div id="split" class="actions">
@@ -214,7 +212,7 @@
                 </div>
                	<button onclick="bDividePreview()">Посмотреть субобласти</button><br>
 				<div id="d_count"></div>
-				<button id="b_divide" onclick="bDivideDo()">Заменить область</button>
+				<button id="b_divide_do" onclick="bDivideDo()">Заменить область</button>
 				<br>
 				<button onclick="bDivideCancel()">Вернуться</button>
 			</div>
