Repair 'Extract islands' operation; add automatic recalculation of mwm size estimation after some operations

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -121,7 +121,7 @@
 						<button onclick="bSplit()">Разрезать</button>
 						<button onclick="bJoin()">Склеить</button><br>
 						<button onclick="bJoinToParent()">Склеить всё до родителя</button><br>
-						<button disabled onclick="bLargest()">Выделить острова</button>
+						<button onclick="bLargest()">Выделить острова</button>
 						<button disabled onclick="bHull()">Единый контур</button><br>
 						<button id="b_divide" onclick="bDivide()">Заменить регионами</button><br>
 					</div>
