--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -122,7 +122,7 @@
 						<button onclick="bJoin()">Склеить</button><br>
 						<button onclick="bJoinToParent()">Склеить всё до родителя</button><br>
 						<button onclick="bLargest()">Выделить острова</button>
-						<button disabled onclick="bHull()">Единый контур</button><br>
+						<button onclick="bHull()">Единый контур</button><br>
 						<button id="b_divide" onclick="bDivide()">Заменить регионами</button><br>
 					</div>
 					<div id="info">
