Fix borders backup and stats

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -98,8 +98,7 @@
 					<input type="checkbox" id="old" onchange="bOldBorders()"><label for="old"> старые границы</label>
 				</div>
 				<div id="links">
-					<a href="{{ url_for('static', filename='stat.html') }}">Статистика</a>
-					<a href="{{ url_for('static', filename='import.html') }}" id="import_link">Импорт</a><br>
+					<a href="stat.html">Статистика</a>
 					<a href="#" id="poly_bbox">Скачать в poly видимое</a>,
                     <a href="#" id="poly_all">всё</a><br>
                     <a href="#" id="start_over" onclick="startOver()">Начать заново</a>
