Elaborate search endpoint

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -210,7 +210,7 @@
             <span id="wait_start_over">ожидайте...</span>
         </div>
         <div id="search">
-            Поиск <input type="text" id="fsearch">
+            Поиск <input type="text" id="fsearch" placeholder="Use ^/$ for start/end">
             <button id="b_search" onclick="doSearch()">&#x1f50d;</button>
         </div>
     </div>
