Metalevels in admin levels; country autodivision by metalevels and mwm size estimation

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -227,6 +227,8 @@
                 <button onclick="bSplit()">Разрезать</button>
                 <button onclick="bJoin()">Склеить</button>
                 <br>
+                <button onclick="bSimpleSplit()">Разрезать на 2/4 части</button>
+                <br>
                 <button onclick="bJoinToParent()">Склеить всё до родителя</button>
                 <br>
                 <button onclick="bLargest()">Выделить острова</button>
